textual game start link on intro page

--- a/public/intro.html
+++ b/public/intro.html
@@ -35,6 +35,9 @@
 					<a href="/walls/">
 		    		<img src="/images/startpage/znil.png" width="236" height="220" alt="" />
 					</a>
+          <p>
+            <strong><big><a href="/walls/">Start Game</a></big></strong>
+          </p>
 	    	</div>
 				
 				<div id="i-ml">
