new about page, moved content form intro.html to index.html because launch party banner died

--- a/public/intro.html
+++ b/public/intro.html
@@ -32,7 +32,7 @@
 	    		<img src="/images/startpage/idod.png" width="106" height="139" alt="" />
 	    	</div>
 				<div id="mm">
-					<a href="/walls/">
+          <a href="/walls/">
 		    		<img src="/images/startpage/znil.png" width="236" height="220" alt="" />
 					</a>
           <p>
@@ -78,7 +78,7 @@
 				</div>
 				<div id="i-mm">
 					<p>? warum gerade Linz ?</p>
-					<p><a href="#">about</a></p>
+					<p><a href="/about.html">about</a></p>
 				</div>
 				
 				<div id="i-mb">
